--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.3",
     "autoprefixer": "^10.4.23",
     "next": "16.1.2",
     "postcss": "^8.5.6",
